--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
@@ -111,7 +111,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Password"
                     android:inputType="textPassword"
