--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,7 +95,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
@@ -115,7 +115,7 @@
                     android:id="@+id/fullName"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Full Name"
                     android:inputType="text"
@@ -135,7 +135,7 @@
                     android:id="@+id/nickName"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Nick name"
                     android:inputType="textEmailAddress"
@@ -156,7 +156,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Password"
                     android:inputType="textPassword"
@@ -177,7 +177,7 @@
                     android:id="@+id/passwordConfirm"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_36sdp"
-                    android:background="@drawable/edit__input"
+                    style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Password Confirm"
                     android:inputType="textPassword"
