--- a/app/src/main/res/layout/item_container_user.xml
+++ b/app/src/main/res/layout/item_container_user.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="13sp"
         android:fontFamily="@font/nunito_regular"
         app:layout_constraintBottom_toTopOf="@id/viewSuporter"
@@ -44,7 +44,7 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
