--- a/app/src/main/res/drawable/arrow_next.xml
+++ b/app/src/main/res/drawable/arrow_next.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#090A0A"
+      android:strokeColor="@color/primary__color"
       android:strokeLineCap="round"/>
 </vector>
