--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/page_bg"
     tools:context=".activities.AddPostActivity">
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_marginTop="25dp"
         android:fontFamily="@font/nunito_regular"
         android:text="Add Post"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="@dimen/_13ssp" />
 
     <EditText
@@ -65,7 +66,7 @@
         android:layout_marginTop="25dp"
         android:fontFamily="@font/nunito_regular"
         android:text="Images"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="@dimen/_13ssp" />
 
     <com.google.android.flexbox.FlexboxLayout
