--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="@dimen/_16sdp"
-        android:background="@drawable/background_content_top"
+        style="@style/content__top"
         app:layout_constraintBottom_toTopOf="@id/layoutSend"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -48,18 +48,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:tint="@color/white"
         app:layout_constraintTop_toTopOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/phone"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:layout_marginRight="@dimen/_8sdp"
-        android:padding="@dimen/_4sdp"
-        android:tint="@color/white"
-        android:src="@drawable/baseline_phone_24"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/video" />
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageProfile"
@@ -197,6 +185,7 @@
         android:gravity="center"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/viewSupporter"/>
+
     <View
         android:id="@+id/viewImage"
         android:layout_width="match_parent"
@@ -205,6 +194,15 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/viewBackground" />
 
+    <ProgressBar
+        android:id="@+id/loadingImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/viewImage"
+        app:layout_constraintTop_toTopOf="@+id/viewImage" />
     <ImageView
         android:id="@+id/image"
         android:layout_width="75dp"
