--- a/app/src/main/res/layout/activity_update_user_data.xml
+++ b/app/src/main/res/layout/activity_update_user_data.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.UpdateUserDataActivity"
+    style="@style/page_bg"
     android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
@@ -12,7 +13,7 @@
         android:textSize="@dimen/_13ssp"
         android:fontFamily="@font/nunito_regular"
         android:text="Update Profile"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"/>
     <FrameLayout
