--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/comments_dialog_bg"
+    style="@style/content__bottom"
     android:paddingHorizontal="10dp"
     android:orientation="vertical">
 
