--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog_item.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog_item.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_regular"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="@dimen/_13ssp"
         android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
