--- a/app/src/main/res/layout/item_container_post.xml
+++ b/app/src/main/res/layout/item_container_post.xml
@@ -67,11 +67,19 @@
                     android:id="@+id/likeButton"
                     android:layout_width="@dimen/_18sdp"
                     android:layout_height="@dimen/_18sdp" />
+                <TextView
+                    android:id="@+id/likeCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:layout_marginLeft="5dp"
+                    android:fontFamily="@font/nunito_regular"
+                    android:layout_gravity="center_vertical"/>
                 <ImageView
                     android:id="@+id/showComments"
                     android:layout_width="@dimen/_18sdp"
                     android:layout_height="@dimen/_18sdp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="5dp"
                     android:src="@drawable/comment"/>
             </LinearLayout>
             <TextView
