--- a/app/src/main/res/layout/item_container_recent_conversion.xml
+++ b/app/src/main/res/layout/item_container_recent_conversion.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="16sp"
         android:fontFamily="@font/nunito_bold"
         app:layout_constraintBottom_toTopOf="@id/viewSuporter"
@@ -44,7 +44,7 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/black"
+        style="@style/text__color"
         android:textSize="14sp"
         android:fontFamily="@font/nunito_light"
         app:layout_constraintEnd_toEndOf="parent"
