--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,15 +5,15 @@
         android:icon="@drawable/home"
         android:title=""/>
     <item
-        android:id="@+id/chat"
-        android:icon="@drawable/message"
+        android:id="@+id/search"
+        android:icon="@drawable/baseline_search_24"
         android:title=""/>
     <item
         android:id="@+id/placeHolder"
         android:title="" />
     <item
-        android:id="@+id/notifications"
-        android:icon="@drawable/notifications"
+        android:id="@+id/chat"
+        android:icon="@drawable/message"
         android:title=""/>
     <item
         android:id="@+id/profile"
